# swarm

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  pyrightconfig.json  test-plan.yaml
.claude/loop-history/: 20260118-005428.md  20260118-011259.md  20260118-141956.md
.claude/plans/: gleaming-cuddling-pike.md
examples/: cross_check.py  debt.py
routines/: SCANNER.md
swarm/: __init__.py  api.py  cli.py  db.py  deps.py  executor.py  executor_sdk.py  git.py  logs.py  merge.py  models.py  parser.py  roles.py  scheduler.py  tools.py
swarm/adapters/: __init__.py
swarm/batch/: __init__.py  dag.py  input.py  logs.py  merge.py  plan.py  scheduler.py  sqlite.py
swarm/core/: __init__.py  agent.py  budget.py  capabilities.py  coordination.py  deps.py  errors.py  events.py  execution.py  profiles.py  workspace.py
swarm/gitops/: merge.py  worktrees.py
swarm/io/: __init__.py  parser.py  plan_builder.py  validation.py
swarm/live/: __init__.py  bridge.py  in_memory.py  pipeline.py
swarm/models/: __init__.py  specs.py  state.py
swarm/runtime/: __init__.py  executor.py  scheduler.py  (+1 more)
tests/: __init__.py  conftest.py  test_adapter_capability_map.py  test_api.py  test_batch_dag.py  test_batch_input.py  test_batch_plan.py  test_batch_scheduler.py  test_batch_sqlite.py  test_cli.py  test_core_profiles.py  test_db.py  test_deps.py  test_executor.py  test_executor_registry.py  test_git.py  test_live_bridge.py  test_live_pipeline.py  test_merge.py  test_openai_executor.py  test_parser.py  test_roles.py  test_scheduler.py  test_tools.py
(+37 files in other folders)
