[project]
name = "claude-swarm"
version = "0.1.0"
description = "Multi-agent orchestration framework for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.1.19",
]
openai = [
    "openai-agents>=0.0.9",
    "openai>=1.50",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "claude-agent-sdk>=0.1.19",
    "openai-agents>=0.0.9",
    "openai>=1.50",
]

[project.scripts]
swarm = "swarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarm"]
